2005-11-18  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h: Changed default cipher to aes128.
	* NEWS: Updated.

	* src/libmunge/ctx.c(munge_ctx_set): Added test for MUNGE_OPT_REALM
	  to ensure realm strlen < 256.

	* src/munged/enc_v1.c: Removed enc_v1_precompress().
	  Moved enc_v1_mac() between enc_v1_compress() & enc_v1_encrypt().
	* src/munged/dec_v1.c:
	  Moved dec_v1_mac() between dec_v1_decrypt() & dec_v1_decompress().
	* src/munged/cred.c, src/munged/cred.h: Removed from struct munge_cred
	  the zippy_mem_len, zippy_mem, zippy_len, & zippy fields used by
	  enc_v1_precompress().
	* src/munged/cred.h: Incremented MUNGE_CRED_VERSION to 3.
	* doc/credential_v1_format.txt, doc/credential_v2_format.txt: Updated.
	* doc/credential_v3_format.txt: Added to fix bug with credential's
	  compression header not being protected by the mac.
	* NEWS: Updated.

2005-11-17  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/dec_v1.c(dec_v1_decompress): Added test to abort
	  decompression if a block cipher padding error has already occurred.
	* src/munged/dec_v1.c: Moved c->salt_len initialization from
	  dec_v1_unpack_outer() to dec_v1_unpack_inner().

	* src/munged/zip.c(zip_compress_block,zip_decompress_block):
	  Added check to ensure (srclen > 0).

2005-11-16  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_debug.m4: Fixed behavior when enable-debug && !CFLAGS.

	* src/munged/zip.c: Added magic sentinel to beginning of zip_meta_t
	  to check if embedded length of original uncompressed data is valid.
	* src/munged/zip.h(zip_compress_block,zip_decompress_block):
	  Changed name of dstlen parm to pdstlen.

	* config/x_ac_debug.m4: Changed behavior to allow existing CFLAGS to
	  be preserved when debugging is enabled.

2005-10-31  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.4.3.

2005-10-25  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init: Fixed bug with RHEL4-U1's chkconfig where it